# Strata

./: .gitignore  AI_Runner_Kurumsal_Spesifikasyon_V3.md  README.md
.github/workflows/: ci.yml
ai-runner/: .coveragerc  LICENSE  README.md  backend_sidecar.py  baslat_0_vram.bat  index.html  package-lock.json  package.json  vite.config.js
ai-runner/backend/: __init__.py  cli.py  main.py  requirements-base.txt  requirements-ci.txt  requirements-dev.txt  requirements-ultra.txt  requirements.txt
ai-runner/backend/api/: __init__.py  auth.py  routes_chat.py  routes_extreme.py  routes_models.py  routes_optimizer.py  routes_settings.py  routes_ultra.py  ws_telemetry.py
ai-runner/backend/core/: __init__.py  extreme_model.py  hardware_profile.py  inference_engine.py  memory_manager.py  model_loader.py  quant_matrix.py  quantization_service.py  runtime_capabilities.py  system_optimizer.py
ai-runner/backend/core/strata_ultra/: __init__.py  attention.py  benchmark.py  chat.py  container.py  converter.py  cuda_backend.py  executor.py  format.py  generation.py  graph.py  iq_native.py  iq_registry.py  kv_cache.py  kv_runtime.py  layers.py  layout.py  numpy_backend.py  paging.py  quality.py  sparse_codec.py  ternary.py  tokenizer.py  transformer.py
ai-runner/backend/db/: __init__.py  schema.sql  session_store.py
ai-runner/backend/models/: __init__.py  model_manager.py
ai-runner/backend/tests/: __init__.py  conftest.py  test_api_integration.py  test_chat_timeout.py  test_cli.py  test_cuda_backend_validation.py  test_extreme_api.py  test_extreme_model.py  test_generation_timeout_settings.py  test_hardware_profile.py  test_inference_engine.py  test_iq4_nl_decoder.py  test_iq_native_adapter.py  test_iq_native_validation.py  test_iq_registry.py  test_memory_manager.py  test_model_loader_quant.py  test_model_manager.py  test_runtime_capabilities.py  test_session_store.py  test_strata_attention.py  test_strata_benchmark.py  test_strata_chat.py  test_strata_chat_api.py  test_strata_container.py  test_strata_converter.py  test_strata_end_to_end.py  test_strata_executor.py  test_strata_generate_route_e2e.py  test_strata_generation.py  test_strata_generation_cancel_prefill.py  test_strata_generation_config.py  test_strata_generation_stop.py  test_strata_generation_timeout.py  test_strata_graph.py  test_strata_kv_cache.py  test_strata_kv_runtime.py  test_strata_layers.py  test_strata_layout.py  test_strata_layout_adapter.py  (+22 more)
ai-runner/native/: CMakeLists.txt  README.md
ai-runner/native/cuda/: strata_cuda.cu
ai-runner/native/iq/: strata_iq.cpp
ai-runner/scripts/: before-tauri-build.ps1  build-desktop.ps1  build-native-cuda.ps1  build-native-iq.ps1  build-sidecar.ps1  check-native-toolchain.ps1  smoke-sidecar.ps1
ai-runner/src/: App.css  App.jsx
ai-runner/src-tauri/: Cargo.toml  tauri.conf.json
ai-runner/src-tauri/icons/: icon.icns
ai-runner/src-tauri/src/: main.rs
ai-runner/src/api/: client.js
ai-runner/src/components/: ChatConsole.css  ChatConsole.jsx  ExtremeModelCenter.css  ExtremeModelCenter.jsx  HardwareCard.css  HardwareCard.jsx  LayerDistributionBar.css  LayerDistributionBar.jsx  MessageBubble.css  MessageBubble.jsx  ModelCard.css  ModelCard.jsx  ModelShelf.css  ModelShelf.jsx  SessionList.css  SessionList.jsx  SettingsModal.css  SettingsModal.jsx  StrataUltraPanel.jsx  SystemOptimizer.css  SystemOptimizer.jsx  TelemetryPanel.css  TelemetryPanel.jsx
ai-runner/src/i18n/: en.json  tr.json  useTranslation.js
ai-runner/src/store/: useExtremeStore.js  useHardwareStore.js  useModelStore.js  useOptimizerStore.js  useSessionStore.js  useSettingsStore.js  useTelemetryStore.js
ai-runner/src/styles/: global.css  tokens.css
