[package]
name = "ai-runner"
version = "1.0.0"
description = "AI Runner — Yerel LLM Çalıştırma Platformu"
authors = ["AI Runner"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
